Refactor image apis to use multiple sizes
